[package]
name = "tauri_hacktool"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_hacktool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
widestring = "1.2.1"
tokio = {version = "1.48", features= ["full"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"

windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
	"Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
	"Win32_System_Diagnostics_ToolHelp",
	"Win32_System_Threading",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_Memory",
] }
